Fix Marker on Map and Add CSS Module
-Fix not showing map marker by importing MarkerF

-Add CSS Module for the Map and move the Map’s CSS styles there

--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,6 @@ code {
 
 /* Own Styles -> Think better place later */
 
-.map {
-  height: 30vh;
-  width: 80vw;
-}
-
-.map-container {
-  width: 100%;
-  height: 100%;
-}
 
 /* Table */
 
